--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "viem": "^2.21.60",
     "wagmi": "^2.14.1",
     "zod": "^3.24.1",
-    "@wagmi/cli": "^2.1.17"
+    "@wagmi/cli": "^2.1.17",
+    "tslog": "^4.9.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.1.0",
